tools/k8s/dev/frontend/web-evidence.k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-web
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: web-evidence.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-evidence
                port:
                  number: 8000
